--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+h1{
+color: red;
+font-size: 45px;
+background-color: black;
+font-family:verdana;
+}
+body{
+padding:45px;
+margin:30px;
+background:#FFD700;}
+p{
+padding: 45px;
+margin:  35px;
+background: #ffffff;
+border-bottom: 8px solid black;
+}
+img{
+float: left;
+}
+.brag{
+font-family:Arial;
+}
+#Mywebpage{
+background:red;
+}
+</style>
 </head>
 <body>
 <h1>Cody Fakhoorian</h1>
@@ -9,16 +36,16 @@
 <li><a href="#why?">why?</a></li>
 </ul>
 <h2>My webpage</h2>
-<h3> Nonsense, that is</h3>
+<h3>Nonsense, that is</h3>
 <p> It all started.. when I was born</p>
 <p> St. Valentines</p>
-<p>Isn't it wonderful?</p>
-<img src="https://flic.kr/p/8SUChJ" />
-<a data-flickr-embed="true" href="https://www.flickr.com/photos/27587002@N07/5170590074" title="Puppy"><img src="https://live.staticflickr.com/4112/5170590074_afe540141c_k.jpg" width="2048" height="1625" alt="Puppy"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<p> Isn't it wonderful?</p>
+<img src="https://live.staticflickr.com/4112/5170590074_afe540141c_k.jpg" width="2048" height="1625" alt: Pupper doin me a pose></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 <video src="https://www.youtube.com/watch?v=r6UwAkdDeQ8" height="240" width="320" controls>Video not supported</video>
-<div id="My webpage">
+<div id="Mywebpage">
 <h2> My webpage</h2>
 <a href="http://www.utm.edu">UTM</a>
+</div>
 <table>
 <tr>
 <thead>
@@ -33,6 +60,7 @@
 <td>Life</td>
 <td>what is life?</td>
 </tr>
+
 </tbody>
 </body>
 </html>
