--- a/index.html
+++ b/index.html
@@ -1,66 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-h1{
-color: red;
-font-size: 45px;
-background-color: black;
-font-family:verdana;
-}
-body{
-padding:45px;
-margin:30px;
-background:#FFD700;}
-p{
-padding: 45px;
-margin:  35px;
-background: #ffffff;
-border-bottom: 8px solid black;
-}
-img{
-float: left;
-}
-.brag{
-font-family:Arial;
-}
-#Mywebpage{
-background:red;
-}
-</style>
-</head>
+<title>Cody Fakhoorian About Me</title>
+<head>
+<link  href="Style.css" rel="stylesheet" type:"text/css"/>
 <body>
-<h1>Cody Fakhoorian</h1>
+<img src="Cody.jpg" width="400" height="300"/>
+<h1> Cody Fakhoorian</h1>
+<main>
+<h2>Bachelor of Arts in Communications</h2>
+<p1> My name is Cody Fakhoorian and I am 20 years old. I grew up in a small town in Kentucky with 7 older brothers and one younger sister.
+I've always had a sense of independency growing up, my parents divorced when I was around the age of 7. Since then, I've helped my younger sister and even my older brothers by cooking and getting my younger sister to school on time. 
+In my current job, I help train the new delivery drivers on the prepping and the right script talk for handling customers. I believe what I can bring to your company is delegation and leadership not often found outside the workplace.
+ My interests are Computer Technology and teaching music. I am a huge advocate for Arts across America's schools, I have been a performer for 9 years, my primary instrument is singing for my choir and percussion for my band. I teach private lessons when I'm not working at my main job. I love helping my students, and love seeing their reactions to music's power and beauty. I also have a deep interest in childcare and I love babysitting
+ my adorable 8 year old niece, my 5 and 4 year old nephews.</p>
+<p2>My goals in life currently are finding what I shine at outside of music and moving North after graduation. I love city life, I have taken trips to Utah, California, New York, and Florida, so I would have no problem relocating for work. I love meeting new people for social connections and networking. </p>
+<p3> Click below to read more about my achievements and work experience.</p>
+<nav>
 <ul>
-<li><a href="#what?">what?"</a></li>
-<li><a href="#why?">why?</a></li>
-</ul>
-<h2>My webpage</h2>
-<h3>Nonsense, that is</h3>
-<p> It all started.. when I was born</p>
-<p> St. Valentines</p>
-<p> Isn't it wonderful?</p>
-<img src="https://live.staticflickr.com/4112/5170590074_afe540141c_k.jpg" width="2048" height="1625" alt: Pupper doin me a pose></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-<video src="https://www.youtube.com/watch?v=r6UwAkdDeQ8" height="240" width="320" controls>Video not supported</video>
-<div id="Mywebpage">
-<h2> My webpage</h2>
-<a href="http://www.utm.edu">UTM</a>
-</div>
-<table>
-<tr>
-<thead>
-<th scope="col">Where am I?</th>
-</thead>
-<tr>
-<tbody>
-<td>Colors</td>
-<td>red,blue</td>
-</tr>
-<tr>
-<td>Life</td>
-<td>what is life?</td>
-</tr>
+<a href="HTML.html">Professional Resume</a>
 
-</tbody>
-</body>
+
+
+
+
+
+
+
+
+<footer> 534 Lee St, Apt. 7, Martin, TN 38237 </footer>
+<footer> 270-970-4867</footer>
+</main>
 </html>
+</head>
+</body>
