--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <title>Cody Fakhoorian About Me</title>
-<head>
+
 <link  href="Style.css" rel="stylesheet" type:"text/css"/>
+</head>
 <body>
 <img src="Cody.jpg" width="400" height="300"/>
 <h1> Cody Fakhoorian</h1>
@@ -14,7 +15,7 @@ I've always had a sense of independency growing up, my parents divorced when I w
 In my current job, I help train the new delivery drivers on the prepping and the right script talk for handling customers. I believe what I can bring to your company is delegation and leadership not often found outside the workplace.
  My interests are Computer Technology and teaching music. I am a huge advocate for Arts across America's schools, I have been a performer for 9 years, my primary instrument is singing for my choir and percussion for my band. I teach private lessons when I'm not working at my main job. I love helping my students, and love seeing their reactions to music's power and beauty. I also have a deep interest in childcare and I love babysitting
  my adorable 8 year old niece, my 5 and 4 year old nephews.</p>
-<p2>My goals in life currently are finding what I shine at outside of music and moving North after graduation. I love city life, I have taken trips to Utah, California, New York, and Florida, so I would have no problem relocating for work. I love meeting new people for social connections and networking. </p>
+<p2>My goals in life currently are finding what I shine at outside of music and moving north after graduation. I love city life, I have taken trips to Utah, California, New York, and Florida, so I would have no problem relocating for work. I love meeting new people for social connections and networking. </p>
 <p3> Click below to read more about my achievements and work experience.</p>
 <nav>
 <ul>
@@ -32,5 +33,4 @@ In my current job, I help train the new delivery drivers on the prepping and the
 <footer> 270-970-4867</footer>
 </main>
 </html>
-</head>
 </body>
