--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Cody Fakhoorian About Me</title>
 
-<link  href="Style.css" rel="stylesheet" type:"text/css"/>
+<link  href="Style.CSS" rel="stylesheet" type:"text/css"/>
 </head>
 <body>
 <img src="Cody.jpg" width="400" height="300"/>
